Add Struct Exercises

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(kea_c C)
 
 set(CMAKE_C_STANDARD 11)
 
-add_executable(kea_c main.c assignment01.h assignment01.c)
+add_executable(kea_c main.c assignment01.h assignment01.c assignment02.h assignment02.c)
