--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(kea_c C)
 
 set(CMAKE_C_STANDARD 11)
 
-add_executable(kea_c main.c assignment01.h assignment01.c assignment02.h assignment02.c assignment03.h assignment03.c assignment04.c assignment04.h)
+add_executable(kea_c main.c assignment01.h assignment01.c assignment02.h assignment02.c assignment03.h assignment03.c assignment04.c assignment04.h assignment05.c assignment05.h PointerToPointer1.c PointerToRainData.c)
